opam-version: "2.0"
name: "certify"
synopsis: "Minimal tool to create self-signed SSL certificates"
maintainer: "Christian Lindig <lindig@gmail.com>"
authors: "Christian Lindig <lindig@gmail.com>"
license: "Unlicense"
homepage: "https://github.com/lindig/certify"
bug-reports: "https://github.com/lindig/certify/issues"
depends: [
  "dune" {build}
	"cstruct"
	"ptime"
	"mirage-crypto"
	"x509"
  "cmdliner"
]
build: ["dune" "build" "-p" name "@install"]
dev-repo: "git+https://github.com/lindig/certify.git"
